--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <p>第２回Git勉強会を開催します。みなさま、是非ご参加ください！</p>
                     <article>
                         <h3>イベント日時・場所</h3>
+                        <!--プロジェクト遅延および会場のスケジュールの都合上3/23から6/21に変更-->
                         <p>6月21日 19:00開始</p>
                         <p>株式会社インプレス イベントセミナー会場</p>
                     </article>
